# OpenRadioOS

./: CMakeLists.txt  main.c
src/: FreeRTOS.c  FreeRTOSConfig.h
src/core/: log.h  node_list.h
src/ui/: ui.h  utils.h  window.c  window.h
src/ui/animation/: animation.c  animation.h  property_animation.c  property_animation.h
src/ui/layer/: layer.c  layer.h
src/ui/types/: color.h  colors.h  context.c  context.h  cornermask.h  point.h  rect.c  rect.h  size.h
